# OUTOFSTEP_ML

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
configs/: ablation_no_engineered.yaml  ablation_no_physics.yaml  base.yaml  calibration.yaml  catboost_baseline.yaml  fttransformer.yaml  full_benchmark.yaml  full_benchmark_long.yaml  full_benchmark_smoke.yaml  logic_ladder.yaml  logreg.yaml  model_static_physics.yaml  proposed_physics_model.yaml  random_forest.yaml  smoke.yaml  static_q1_validation.yaml  static_q1_validation_long.yaml  static_q1_validation_smoke.yaml  static_q1_validation_xlong.yaml  svm.yaml  tabnet.yaml  thresholds.yaml  xgboost_or_lightgbm.yaml
docs/: CASE_STUDY_PLAN.md  CASE_STUDY_VALIDATION_DESIGN.md  GRID_SYNC_PRODUCT_GUIDE.md  IMPLEMENTATION_PLAN_STATIC_OOS_VALIDATION.md  MODEL_COMPARISON_REPORT.md  OOS_COMPREHENSIVE_INTERPRETATION_GUIDE.md  PR_SUMMARY.md  REPO_AUDIT_BENCHMARK_UPGRADE.md  REPO_AUDIT_STATIC_OOS_VALIDATION.md  SOTA_RESEARCH_EXTENSION_AND_EVALUATION_MATRIX.md  TRAINING_BUDGET_POLICY.md
outputs/: OOS_GR1_problem_formulation.md  OOS_GR1_results_discussion.md  results_manifest.json
scripts/: build_grid_sync_product.py  evaluate_static.py  export_model.py  generate_figures.py  generate_static_q1_figures.py  generate_static_q1_tables.py  generate_tables.py  generate_word_report.py  predict_grid_sync.py  run_ablation.py  run_full_benchmark.py  run_logic_ladder.py  run_robustness.py  run_static_q1_validation.py  train_model.py  train_static.py
src/: api_app.py  data.py  eval.py  (+8 more)
(+281 files in other folders)
